--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,15 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+
+
+<!-- prettyprint syntax highlighter as seen on HTML5Rocks and the sunburst theme (little modified)  -->
+<link rel="stylesheet" href="/assets/prettyprint-highlighter/prettify-sunburst.css" media="all">
+
+<script src="/assets/prettyprint-highlighter/prettify.js"></script>
+<script>
+	//load prettify.js
+	$(document).ready(function(){
+		prettyPrint();
+	});
+</script>
