--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,61 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+html {
+	background: $page-bg image-url('filkor_bg.jpg');
+}
+
+body {
+	max-width: 1100px;
+}
+
+body > header {
+	background: none;
+	text-align: center;
+}
+
+#main {
+	padding: 10px;
+	border-radius: 10px 10px 0 0;
+}
+
+
+// /sass/base/_typography.scss
+@media only screen and (min-width: 992px) {
+  body { font-size: 1.0em; } //this was 1.15em;
+  h1 { font-size: 2.6em; line-height: 1.2em; }
+}
+
+pre {
+  border:none;
+}
+
+pre::-webkit-scrollbar, .highlight::-webkit-scrollbar, .gist-highlight::-webkit-scrollbar {
+	height: 0.8em;
+	background: none;
+}
+
+p code, li code {
+	background: #eee;
+	border: 1px solid #ccc;
+	color: #444;
+}
+
+article .entry-content .aligncenter {
+	clear: both;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+section[role="author"] img {
+	border: none;
+	width: 17px;
+	box-shadow: none;
+}
+
+section[role="author"] .badge {
+	text-align: center;
+	margin: 18px 0 0 0;
+}
